// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Row flex布局 1`] = `
<div>
  <div
    class="box"
  >
    <div
      class="Row-flex-0-1-2 Row-align-top-0-1-8"
      role="row"
      style="margin-left: -5px; margin-right: -5px;"
    >
      <div
        class="Col-root-0-1-11 Col-span-6-0-1-38"
        role="cell"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="col"
        >
          col1
        </div>
      </div>
      <div
        class="Col-root-0-1-11 Col-span-6-0-1-38"
        role="cell"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="col"
        >
          col2
        </div>
      </div>
      <div
        class="Col-root-0-1-11 Col-span-6-0-1-38"
        role="cell"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="col"
        >
          col3
        </div>
      </div>
      <div
        class="Col-root-0-1-11 Col-span-6-0-1-38"
        role="cell"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="col"
        >
          col4
        </div>
      </div>
    </div>
  </div>
  <div
    class="box"
  >
    <div
      class="Row-flex-0-1-2 Row-align-middle-0-1-9"
      role="row"
      style="margin-left: -5px; margin-right: -5px;"
    >
      <div
        class="Col-root-0-1-11 Col-span-6-0-1-38"
        role="cell"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="col"
        >
          col1
        </div>
      </div>
      <div
        class="Col-root-0-1-11 Col-span-6-0-1-38"
        role="cell"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="col"
        >
          col2
        </div>
      </div>
      <div
        class="Col-root-0-1-11 Col-span-6-0-1-38"
        role="cell"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="col"
        >
          col3
        </div>
      </div>
      <div
        class="Col-root-0-1-11 Col-span-6-0-1-38"
        role="cell"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="col"
        >
          col4
        </div>
      </div>
    </div>
  </div>
  <div
    class="box"
  >
    <div
      class="Row-flex-0-1-2 Row-align-bottom-0-1-10"
      role="row"
      style="margin-left: -5px; margin-right: -5px;"
    >
      <div
        class="Col-root-0-1-11 Col-span-6-0-1-38"
        role="cell"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="col"
        >
          col1
        </div>
      </div>
      <div
        class="Col-root-0-1-11 Col-span-6-0-1-38"
        role="cell"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="col"
        >
          col2
        </div>
      </div>
      <div
        class="Col-root-0-1-11 Col-span-6-0-1-38"
        role="cell"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="col"
        >
          col3
        </div>
      </div>
      <div
        class="Col-root-0-1-11 Col-span-6-0-1-38"
        role="cell"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="col"
        >
          col4
        </div>
      </div>
    </div>
  </div>
  <div
    class="box"
  >
    <div
      class="Row-flex-0-1-2 Row-justify-start-0-1-3"
      role="row"
      style="margin-left: -5px; margin-right: -5px;"
    >
      <div
        class="Col-root-0-1-11 Col-span-6-0-1-38"
        role="cell"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="col"
        >
          col1
        </div>
      </div>
      <div
        class="Col-root-0-1-11 Col-span-6-0-1-38"
        role="cell"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="col"
        >
          col2
        </div>
      </div>
      <div
        class="Col-root-0-1-11 Col-span-6-0-1-38"
        role="cell"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="col"
        >
          col3
        </div>
      </div>
    </div>
  </div>
  <div
    class="box"
  >
    <div
      class="Row-flex-0-1-2 Row-justify-center-0-1-5"
      role="row"
      style="margin-left: -5px; margin-right: -5px;"
    >
      <div
        class="Col-root-0-1-11 Col-span-6-0-1-38"
        role="cell"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="col"
        >
          col1
        </div>
      </div>
      <div
        class="Col-root-0-1-11 Col-span-6-0-1-38"
        role="cell"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="col"
        >
          col2
        </div>
      </div>
      <div
        class="Col-root-0-1-11 Col-span-6-0-1-38"
        role="cell"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="col"
        >
          col3
        </div>
      </div>
    </div>
  </div>
  <div
    class="box"
  >
    <div
      class="Row-flex-0-1-2 Row-justify-end-0-1-4"
      role="row"
      style="margin-left: -5px; margin-right: -5px;"
    >
      <div
        class="Col-root-0-1-11 Col-span-6-0-1-38"
        role="cell"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="col"
        >
          col1
        </div>
      </div>
      <div
        class="Col-root-0-1-11 Col-span-6-0-1-38"
        role="cell"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="col"
        >
          col2
        </div>
      </div>
      <div
        class="Col-root-0-1-11 Col-span-6-0-1-38"
        role="cell"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="col"
        >
          col3
        </div>
      </div>
    </div>
  </div>
  <div
    class="box"
  >
    <div
      class="Row-flex-0-1-2"
      role="row"
      style="margin-left: -5px; margin-right: -5px;"
    >
      <div
        class="Col-root-0-1-11 Col-order-3-0-1-27 Col-span-6-0-1-38"
        role="cell"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="col"
        >
          col1
        </div>
      </div>
      <div
        class="Col-root-0-1-11 Col-order-1-0-1-17 Col-span-6-0-1-38"
        role="cell"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="col"
        >
          col2
        </div>
      </div>
      <div
        class="Col-root-0-1-11 Col-order-2-0-1-22 Col-span-6-0-1-38"
        role="cell"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="col"
        >
          col3
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Row 偏移布局 1`] = `
<div>
  <div
    class="box"
  >
    <div
      class="Row-root-0-1-1"
      role="row"
      style="margin-left: -5px; margin-right: -5px;"
    >
      <div
        class="Col-root-0-1-11 Col-span-6-0-1-38"
        role="cell"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="col"
        >
          col1
        </div>
      </div>
      <div
        class="Col-root-0-1-11 Col-offset-6-0-1-39 Col-span-6-0-1-38"
        role="cell"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="col"
        >
          col2
        </div>
      </div>
      <div
        class="Col-root-0-1-11 Col-span-6-0-1-38"
        role="cell"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="col"
        >
          col3
        </div>
      </div>
    </div>
  </div>
  <div
    class="box"
  >
    <div
      class="Row-root-0-1-1"
      role="row"
      style="margin-left: -5px; margin-right: -5px;"
    >
      <div
        class="Col-root-0-1-11 Col-span-6-0-1-38"
        role="cell"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="col"
        >
          col1
        </div>
      </div>
      <div
        class="Col-root-0-1-11 Col-push-6-0-1-40 Col-span-6-0-1-38"
        role="cell"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="col"
        >
          col2
        </div>
      </div>
      <div
        class="Col-root-0-1-11 Col-pull-6-0-1-41 Col-span-6-0-1-38"
        role="cell"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="col"
        >
          col3
        </div>
      </div>
      <div
        class="Col-root-0-1-11 Col-span-6-0-1-38"
        role="cell"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="col"
        >
          col4
        </div>
      </div>
    </div>
  </div>
  <div
    class="box"
  >
    <div
      class="Row-root-0-1-1"
      role="row"
      style="margin-left: -5px; margin-right: -5px;"
    >
      <div
        class="Col-root-0-1-11 Col-offset-6-0-1-39 Col-span-6-0-1-38"
        role="cell"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="col"
        >
          col1
        </div>
      </div>
      <div
        class="Col-root-0-1-11 Col-pull-12-0-1-71 Col-span-6-0-1-38"
        role="cell"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="col"
        >
          col2
        </div>
      </div>
      <div
        class="Col-root-0-1-11 Col-span-6-0-1-38"
        role="cell"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="col"
        >
          col4
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Row 响应式偏移 1`] = `
<div>
  <div
    class="box"
  >
    <div
      class="Row-root-0-1-1"
      role="row"
      style="margin-left: -5px; margin-right: -5px;"
    >
      <div
        class="Col-root-0-1-11 Col-span-6-0-1-38"
        role="cell"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="col"
        >
          col1
        </div>
      </div>
      <div
        class="Col-root-0-1-11 Col-span-6-0-1-38"
        role="cell"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="col"
        >
          col2
        </div>
      </div>
      <div
        class="Col-root-0-1-11 Col-span-6-0-1-38"
        role="cell"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="col"
        >
          col3
        </div>
      </div>
    </div>
  </div>
  <div
    class="box"
  >
    <div
      class="Row-root-0-1-1"
      role="row"
      style="margin-left: -5px; margin-right: -5px;"
    >
      <div
        class="Col-root-0-1-11 Col-span-6-0-1-38"
        role="cell"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="col"
        >
          col1
        </div>
      </div>
      <div
        class="Col-root-0-1-11 Col-span-6-0-1-38"
        role="cell"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="col"
        >
          col2
        </div>
      </div>
      <div
        class="Col-root-0-1-11 Col-span-6-0-1-38"
        role="cell"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="col"
        >
          col3
        </div>
      </div>
    </div>
  </div>
  <div
    class="box"
  >
    <div
      class="Row-root-0-1-1"
      role="row"
      style="margin-left: -5px; margin-right: -5px;"
    >
      <div
        class="Col-root-0-1-11 Col-span-6-0-1-38"
        role="cell"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="col"
        >
          col1
        </div>
      </div>
      <div
        class="Col-root-0-1-11 Col-span-6-0-1-38"
        role="cell"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="col"
        >
          col2
        </div>
      </div>
      <div
        class="Col-root-0-1-11 Col-offset-6-0-1-39 Col-span-6-0-1-38"
        role="cell"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="col"
        >
          col3
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Row 响应式布局 1`] = `
<div
  class="box"
>
  <div
    class="Row-root-0-1-1"
    role="row"
  >
    <div
      class="Col-root-0-1-11"
      role="cell"
    >
      <div
        class="col"
      >
        col1
      </div>
    </div>
    <div
      class="Col-root-0-1-11"
      role="cell"
    >
      <div
        class="col"
      >
        col2
      </div>
    </div>
    <div
      class="Col-root-0-1-11"
      role="cell"
    >
      <div
        class="col"
      >
        col3
      </div>
    </div>
    <div
      class="Col-root-0-1-11"
      role="cell"
    >
      <div
        class="col"
      >
        col4
      </div>
    </div>
  </div>
</div>
`;

exports[`Row 基本用法 1`] = `
<div>
  <div
    class="box"
  >
    <div
      class="Row-root-0-1-1"
      role="row"
      style="margin-left: -5px; margin-right: -5px;"
    >
      <div
        class="Col-root-0-1-11 Col-span-4-0-1-28"
        role="cell"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="col"
        >
          col1
        </div>
      </div>
      <div
        class="Col-root-0-1-11 Col-span-5-0-1-33"
        role="cell"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="col"
        >
          col2
        </div>
      </div>
      <div
        class="Col-root-0-1-11 Col-span-7-0-1-43"
        role="cell"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="col"
        >
          col3
        </div>
      </div>
      <div
        class="Col-root-0-1-11 Col-span-8-0-1-48"
        role="cell"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="col"
        >
          col4
        </div>
      </div>
    </div>
  </div>
  <div
    class="box"
  >
    <div
      class="Row-root-0-1-1"
      role="row"
      style="margin-left: -5px; margin-right: -5px;"
    >
      <div
        class="Col-root-0-1-11 Col-span-6-0-1-38"
        role="cell"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="col"
        >
          col1
        </div>
      </div>
      <div
        class="Col-root-0-1-11 Col-span-6-0-1-38"
        role="cell"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="col"
        >
          col2
        </div>
      </div>
      <div
        class="Col-root-0-1-11 Col-span-6-0-1-38"
        role="cell"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="col"
        >
          col3
        </div>
      </div>
      <div
        class="Col-root-0-1-11 Col-span-6-0-1-38"
        role="cell"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="col"
        >
          col4
        </div>
      </div>
    </div>
  </div>
  <div
    class="box"
  >
    <div
      class="Row-root-0-1-1"
      role="row"
      style="margin-left: -5px; margin-right: -5px;"
    >
      <div
        class="Col-root-0-1-11 Col-span-8-0-1-48"
        role="cell"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="col"
        >
          col1
        </div>
      </div>
      <div
        class="Col-root-0-1-11"
        role="cell"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="col"
        >
          col2
        </div>
      </div>
      <div
        class="Col-root-0-1-11 Col-span-8-0-1-48"
        role="cell"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="col"
        >
          col3
        </div>
      </div>
      <div
        class="Col-root-0-1-11 Col-span-8-0-1-48"
        role="cell"
        style="padding-left: 5px; padding-right: 5px;"
      >
        <div
          class="col"
        >
          col4
        </div>
      </div>
    </div>
  </div>
</div>
`;
